// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: Loading/hide 1`] = `
.c0 {
  background-color: #000;
  border: none;
  cursor: wait;
  display: none;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.6;
  padding: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

<Loading
  show={false}
>
  <styled.div
    show={false}
  >
    <div
      className="c0"
    />
  </styled.div>
</Loading>
`;

exports[`should match snapshot: Loading/show 1`] = `
.c0 {
  background-color: #000;
  border: none;
  cursor: wait;
  display: inherit;
  height: 100%;
  left: 0;
  margin: 0;
  opacity: 0.6;
  padding: 0;
  position: fixed;
  top: 0;
  width: 100%;
}

<Loading
  show={true}
>
  <styled.div
    show={true}
  >
    <div
      className="c0"
    />
  </styled.div>
</Loading>
`;
